--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kira Ghoul • Projects</title>
-    <link rel="stylesheet" href="/cssfolder/generalstyle.css" />
-    <link rel="stylesheet" href="/cssfolder/pagesizeoptions.css" />
-    <link rel="stylesheet" href="/cssfolder/colorcard.css"/>
-    <link rel="stylesheet" href="/cssfolder/socials.css"/>
-    <link rel="stylesheet" href="/cssfolder/glitchanimation.css"/>
-    <link rel="stylesheet" href="/cssfolder/loaderanimation.css"/>
+    <link rel="stylesheet" href="cssfolder/generalstyle.css" />
+    <link rel="stylesheet" href="cssfolder/pagesizeoptions.css" />
+    <link rel="stylesheet" href="cssfolder/colorcard.css"/>
+    <link rel="stylesheet" href="cssfolder/socials.css"/>
+    <link rel="stylesheet" href="cssfolder/glitchanimation.css"/>
+    <link rel="stylesheet" href="cssfolder/loaderanimation.css"/>
 
 </head>
 
@@ -54,27 +54,27 @@
         </div>   
 
         <div class="slot-middle">
-            <img src="images/icon.png" alt="icon">
+            <img src="Images/icon.png" alt="icon">
         </div>
 
         <div class="slot-right">
             <div class="main">
                 <div class="up">
                     <button class="card1" onclick="window.open('https://colab.research.google.com/drive/18E5p9n6z6HHDA-Q86EKtw1gXNEedz-lW?usp=sharing', '_blank')">
-                        <img src="images/colab.png" alt="Colab" height="30" width="30">
+                        <img src="Images/colab.png" alt="Colab" height="30" width="30">
                     </button>
 
                     <button class="card2" onclick="window.open('https://www.linkedin.com', '_blank')">
-                        <img src="images/linkedin.png" alt="LinkedIn" height="30" width="30">
+                        <img src="Images/linkedin.png" alt="LinkedIn" height="30" width="30">
                     </button>
                 </div>
                 <div class="down">
                     <button class="card3" onclick="window.open('https://github.com/RickGhoul/Spotify-MP3-Converter', '_blank')">
-                        <img src="images/github.png" alt="GitHub" height="30" width="30">
+                        <img src="Images/github.png" alt="GitHub" height="30" width="30">
                     </button>
 
                     <button class="card4" onclick="window.open('https://discord.com', '_blank')">
-                        <img src="images/discord.png" alt="Discord" height="30" width="30">
+                        <img src="Images/discord.png" alt="Discord" height="30" width="30">
                     </button>
                 </div>
             </div>
@@ -87,3 +87,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
